# quick-csv

./: .travis.yml  Cargo.toml
benches/: parse.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: build_index.rs  parse_csv.rs
src/: avx.rs  emulated.rs  index.rs  lib.rs  parse.rs  parser.rs
